fixed width on mobile

--- a/src/scss/crew/_crew-new.scss
+++ b/src/scss/crew/_crew-new.scss
@@ -38,6 +38,7 @@
     }
     @include mobile{
      height: 80%;
+     width: auto;
     }
   }
   //inner-box-container
